Fix an issue with deliverable width on mobile

--- a/web/themes/custom/parc/templates/components/views/deliverables/style.pcss.css
+++ b/web/themes/custom/parc/templates/components/views/deliverables/style.pcss.css
@@ -34,6 +34,7 @@
 
         & > .node {
           min-width: calc((100% - var(--grig-right-s)) / 2);
+          max-width: calc((100% - var(--grig-right-s)) / 2);
           scroll-snap-align: start;
         }
       }
